# recommendation_system

./: hello.py  pyproject.toml
Backend/: main.py
Backend/config/: database.py
Backend/data/: Imdb1000_datasheet.xlsx  eda.ipynb  movies.pkl  test.py  title_index.pkl  user_watch_history.json  users.json
Backend/models/: product.py  user_history.py  user_search_history.py
Backend/routes/: history.py  history_api.py  login_api.py  recommend.py  user.py  user_api.py
Backend/schema/: product.py  user_history.py  user_search_history.py
Backend/services/: history_service.py  histoty_service.py  login_service.py  recommendation_service.py  user_service.py
Frontend/: app.py
Frontend/modules/: dashboard.py  login.py  movie_search.py  similar_movie.py
Frontend/pages/: dashboard.py  movie_search.py  similar_movie.py
