[project]
name = "recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.6",
    "fireducks>=1.1.3",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.41.0",
    "uvicorn>=0.32.1",
]
